# rust-roku

./: Cargo.toml  README.md
src/: discovery.rs  main.rs  roku.rs  ui.rs
ui/: ChannelTab.qml  RemoteTab.qml  remote.qml
