[package]
name = "rust-roku"
version = "0.1.0"
authors = ["Peter Jacobs <peter@crespyl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1"
reqwest = "0.9"
roxmltree = "0.7"
ssdp = "0.7"
qmetaobject = "0.1"